--- a/autolens/config/general.yaml
+++ b/autolens/config/general.yaml
@@ -1,3 +1,5 @@
+jax:
+  use_jax: true                       # If True, uses JAX internally, whereas False uses normal Numpy.
 output:
   fit_dill: false
 test:
