--- a/test_autolens/config/priors/dark_mass_profiles.yaml
+++ b/test_autolens/config/priors/dark_mass_profiles.yaml
@@ -1,6 +1,6 @@
 NFW:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -12,7 +12,7 @@ NFW:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -24,7 +24,7 @@ NFW:
       type: Absolute
       value: 0.05
   ell_comps_0:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -36,7 +36,7 @@ NFW:
       type: Absolute
       value: 0.2
   ell_comps_1:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -48,7 +48,7 @@ NFW:
       type: Absolute
       value: 0.2
   kappa_s:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -58,7 +58,7 @@ NFW:
       type: Relative
       value: 0.2
   scale_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -69,7 +69,7 @@ NFW:
       value: 0.2
 NFWSph:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -81,7 +81,7 @@ NFWSph:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -93,7 +93,7 @@ NFWSph:
       type: Absolute
       value: 0.05
   kappa_s:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -103,7 +103,7 @@ NFWSph:
       type: Relative
       value: 0.2
   scale_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -114,7 +114,7 @@ NFWSph:
       value: 0.2
 NFWTruncatedSph:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -126,7 +126,7 @@ NFWTruncatedSph:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -138,7 +138,7 @@ NFWTruncatedSph:
       type: Absolute
       value: 0.05
   kappa_s:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -148,7 +148,7 @@ NFWTruncatedSph:
       type: Relative
       value: 0.2
   scale_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -158,7 +158,7 @@ NFWTruncatedSph:
       type: Relative
       value: 0.2
   truncation_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -169,7 +169,7 @@ NFWTruncatedSph:
       value: 0.2
 SphNFWTruncatedMCR:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -181,7 +181,7 @@ SphNFWTruncatedMCR:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -193,7 +193,7 @@ SphNFWTruncatedMCR:
       type: Absolute
       value: 0.05
   mass_at_200:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 100000000.0
@@ -204,7 +204,7 @@ SphNFWTruncatedMCR:
       value: 0.5
 gNFW:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -216,7 +216,7 @@ gNFW:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -228,7 +228,7 @@ gNFW:
       type: Absolute
       value: 0.05
   ell_comps_0:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -240,7 +240,7 @@ gNFW:
       type: Absolute
       value: 0.2
   ell_comps_1:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -252,7 +252,7 @@ gNFW:
       type: Absolute
       value: 0.2
   inner_slope:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 3.0
     lower_limit: 0.0
@@ -262,7 +262,7 @@ gNFW:
       type: Absolute
       value: 0.3
   kappa_s:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -272,7 +272,7 @@ gNFW:
       type: Relative
       value: 0.2
   scale_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -283,7 +283,7 @@ gNFW:
       value: 0.2
 gNFWSph:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -295,7 +295,7 @@ gNFWSph:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -307,7 +307,7 @@ gNFWSph:
       type: Absolute
       value: 0.05
   inner_slope:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 3.0
     lower_limit: 0.0
@@ -317,7 +317,7 @@ gNFWSph:
       type: Absolute
       value: 0.3
   kappa_s:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -327,7 +327,7 @@ gNFWSph:
       type: Relative
       value: 0.2
   scale_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
