--- a/test_autolens/config/priors/total_mass_profiles.yaml
+++ b/test_autolens/config/priors/total_mass_profiles.yaml
@@ -1,6 +1,6 @@
 Isothermal:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -12,7 +12,7 @@ Isothermal:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -24,7 +24,7 @@ Isothermal:
       type: Absolute
       value: 0.05
   einstein_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -34,7 +34,7 @@ Isothermal:
       type: Relative
       value: 0.05
   ell_comps_0:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -46,7 +46,7 @@ Isothermal:
       type: Absolute
       value: 0.2
   ell_comps_1:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -59,7 +59,7 @@ Isothermal:
       value: 0.2
 IsothermalCore:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -71,7 +71,7 @@ IsothermalCore:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -83,7 +83,7 @@ IsothermalCore:
       type: Absolute
       value: 0.05
   core_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -93,7 +93,7 @@ IsothermalCore:
       type: Absolute
       value: 0.1
   einstein_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -103,7 +103,7 @@ IsothermalCore:
       type: Relative
       value: 0.05
   ell_comps_0:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -115,7 +115,7 @@ IsothermalCore:
       type: Absolute
       value: 0.2
   ell_comps_1:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -128,7 +128,7 @@ IsothermalCore:
       value: 0.2
 IsothermalCoreSph:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -140,7 +140,7 @@ IsothermalCoreSph:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -152,7 +152,7 @@ IsothermalCoreSph:
       type: Absolute
       value: 0.05
   core_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -162,7 +162,7 @@ IsothermalCoreSph:
       type: Absolute
       value: 0.1
   einstein_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -173,7 +173,7 @@ IsothermalCoreSph:
       value: 0.05
 IsothermalSph:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -185,7 +185,7 @@ IsothermalSph:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -197,7 +197,7 @@ IsothermalSph:
       type: Absolute
       value: 0.05
   einstein_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -208,7 +208,7 @@ IsothermalSph:
       value: 0.05
 PointMass:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -220,7 +220,7 @@ PointMass:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -232,7 +232,7 @@ PointMass:
       type: Absolute
       value: 0.05
   einstein_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -243,7 +243,7 @@ PointMass:
       value: 0.25
 PowerLaw:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -255,7 +255,7 @@ PowerLaw:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -267,7 +267,7 @@ PowerLaw:
       type: Absolute
       value: 0.05
   einstein_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -277,7 +277,7 @@ PowerLaw:
       type: Relative
       value: 0.05
   ell_comps_0:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -289,7 +289,7 @@ PowerLaw:
       type: Absolute
       value: 0.2
   ell_comps_1:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -301,7 +301,7 @@ PowerLaw:
       type: Absolute
       value: 0.2
   slope:
-    gaussian_limits:
+    limits:
       lower: 1.0
       upper: 3.0
     lower_limit: 1.5
@@ -312,7 +312,7 @@ PowerLaw:
       value: 0.2
 PowerLawCore:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -324,7 +324,7 @@ PowerLawCore:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -336,7 +336,7 @@ PowerLawCore:
       type: Absolute
       value: 0.05
   core_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -346,7 +346,7 @@ PowerLawCore:
       type: Absolute
       value: 0.1
   einstein_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -356,7 +356,7 @@ PowerLawCore:
       type: Relative
       value: 0.05
   ell_comps_0:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -368,7 +368,7 @@ PowerLawCore:
       type: Absolute
       value: 0.2
   ell_comps_1:
-    gaussian_limits:
+    limits:
       lower: -1.0
       upper: 1.0
     lower_limit: -1.0
@@ -380,7 +380,7 @@ PowerLawCore:
       type: Absolute
       value: 0.2
   slope:
-    gaussian_limits:
+    limits:
       lower: 1.0
       upper: 3.0
     lower_limit: 1.5
@@ -391,7 +391,7 @@ PowerLawCore:
       value: 0.2
 PowerLawCoreSph:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -403,7 +403,7 @@ PowerLawCoreSph:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -415,7 +415,7 @@ PowerLawCoreSph:
       type: Absolute
       value: 0.05
   core_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -425,7 +425,7 @@ PowerLawCoreSph:
       type: Absolute
       value: 0.1
   einstein_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -435,7 +435,7 @@ PowerLawCoreSph:
       type: Relative
       value: 0.05
   slope:
-    gaussian_limits:
+    limits:
       lower: 1.0
       upper: 3.0
     lower_limit: 1.5
@@ -446,7 +446,7 @@ PowerLawCoreSph:
       value: 0.2
 PowerLawSph:
   centre_0:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -458,7 +458,7 @@ PowerLawSph:
       type: Absolute
       value: 0.05
   centre_1:
-    gaussian_limits:
+    limits:
       lower: -inf
       upper: inf
     lower_limit: -inf
@@ -470,7 +470,7 @@ PowerLawSph:
       type: Absolute
       value: 0.05
   einstein_radius:
-    gaussian_limits:
+    limits:
       lower: 0.0
       upper: inf
     lower_limit: 0.0
@@ -480,7 +480,7 @@ PowerLawSph:
       type: Relative
       value: 0.05
   slope:
-    gaussian_limits:
+    limits:
       lower: 1.0
       upper: 3.0
     lower_limit: 1.5
