--- a/test_autolens/config/priors/light_profiles.yaml
+++ b/test_autolens/config/priors/light_profiles.yaml
@@ -26,7 +26,7 @@ EllLightProfile:
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
-    type: Gaussian
+    type: TruncatedGaussian
     upper_limit: 1.0
     width_modifier:
       type: Absolute
@@ -38,17 +38,15 @@ EllLightProfile:
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
-    type: Gaussian
+    type: TruncatedGaussian
     upper_limit: 1.0
     width_modifier:
       type: Absolute
       value: 0.2
   intensity:
-    lower_limit: 0.0
     mean: 0.0
     sigma: 0.5
     type: Gaussian
-    upper_limit: inf
     width_modifier:
       type: Relative
       value: 0.5
@@ -90,7 +88,7 @@ Exponential:
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
-    type: Gaussian
+    type: TruncatedGaussian
     upper_limit: 1.0
     width_modifier:
       type: Absolute
@@ -102,17 +100,15 @@ Exponential:
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
-    type: Gaussian
+    type: TruncatedGaussian
     upper_limit: 1.0
     width_modifier:
       type: Absolute
       value: 0.2
   intensity:
-    lower_limit: 0.0
     mean: 0.0
     sigma: 0.5
     type: Gaussian
-    upper_limit: inf
     width_modifier:
       type: Relative
       value: 0.5
@@ -121,11 +117,9 @@ Gaussian:
     limits:
       lower: -inf
       upper: inf
-    lower_limit: -inf
     mean: 0.0
     sigma: 0.3
     type: Gaussian
-    upper_limit: inf
     width_modifier:
       type: Absolute
       value: 0.05
@@ -133,11 +127,9 @@ Gaussian:
     limits:
       lower: -inf
       upper: inf
-    lower_limit: -inf
     mean: 0.0
     sigma: 0.3
     type: Gaussian
-    upper_limit: inf
     width_modifier:
       type: Absolute
       value: 0.05
@@ -148,7 +140,7 @@ Gaussian:
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
-    type: Gaussian
+    type: TruncatedGaussian
     upper_limit: 1.0
     width_modifier:
       type: Absolute
@@ -160,7 +152,7 @@ Gaussian:
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
-    type: Gaussian
+    type: TruncatedGaussian
     upper_limit: 1.0
     width_modifier:
       type: Absolute
@@ -190,11 +182,9 @@ Sersic:
     limits:
       lower: -inf
       upper: inf
-    lower_limit: -inf
     mean: 0.0
     sigma: 0.3
     type: Gaussian
-    upper_limit: inf
     width_modifier:
       type: Absolute
       value: 0.05
@@ -202,11 +192,9 @@ Sersic:
     limits:
       lower: -inf
       upper: inf
-    lower_limit: -inf
     mean: 0.0
     sigma: 0.3
     type: Gaussian
-    upper_limit: inf
     width_modifier:
       type: Absolute
       value: 0.05
@@ -224,11 +212,9 @@ Sersic:
     limits:
       lower: -1.0
       upper: 1.0
-    lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
     type: Gaussian
-    upper_limit: 1.0
     width_modifier:
       type: Absolute
       value: 0.2
@@ -236,11 +222,9 @@ Sersic:
     limits:
       lower: -1.0
       upper: 1.0
-    lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
     type: Gaussian
-    upper_limit: 1.0
     width_modifier:
       type: Absolute
       value: 0.2
