--- a/test_autolens/config/general.yaml
+++ b/test_autolens/config/general.yaml
@@ -2,6 +2,8 @@ analysis:
   n_cores: 1
 fits:
   flip_for_ds9: true
+psf:
+  use_fft_default: false              # If True, PSFs are convolved using FFTs by default, which is faster and uses less memory in all cases except for very small PSFs, False uses direct convolution.
 grid:
   remove_projected_centre: false
 hpc:
