--- a/test_autolens/config/priors/pixelizations.yaml
+++ b/test_autolens/config/priors/pixelizations.yaml
@@ -50,7 +50,7 @@ delaunay.DelaunayMagnification:
     width_modifier:
       type: Absolute
       value: 8.0
-rectangular.RectangularMagnification:
+rectangular.RectangularAdaptDensity:
   shape_0:
     limits:
       lower: 3.0
