--- a/test_autolens/config/visualize.yaml
+++ b/test_autolens/config/visualize.yaml
@@ -56,7 +56,8 @@ plots:
     subplot_fit: true
     subplots_of_planes: false
     fits_fit: true                          # Output a .fits file containing the fit model data, residual map, normalized residual map and chi-squared?
-    fits_model_galaxy_images : true         # Output a .fits file containing the model images of every galaxy?
+    fits_galaxy_images : true                # Output a .fits file containing the images (e.g. without PSF convolution) of every galaxy?
+  fits_model_galaxy_images : true          # Output a .fits file containing the model images (e.g. with PSF convolution) of every galaxy?
   fit_imaging: {}
   fit_interferometer:
     subplot_fit_real_space: true
