--- a/autolens/config/visualize/plots.yaml
+++ b/autolens/config/visualize/plots.yaml
@@ -25,23 +25,23 @@ fit:                                       # Settings for plots of all fits (e.g
   subplot_fit_log10: true                  # Plot subplot of all fit quantities for any dataset using log10 color maps (e.g. the model data, residual-map, etc.)?
   subplot_of_planes: false                 # Plot subplot of the model-image, subtracted image and other quantities of each plane?
   subplot_galaxies_images: false              # Plot subplot of the image of each plane in the model?
-  fits_fit: false                          # Output a .fits file containing the fit model data, residual map, normalized residual map and chi-squared?
-  fits_galaxy_images : false               # Output a .fits file containing the images (e.g. without PSF convolution) of every galaxy?
-  fits_model_galaxy_images : false         # Output a .fits file containing the model images (e.g. with PSF convolution) of every galaxy?
+  fits_fit: true                           # Output a .fits file containing the fit model data, residual map, normalized residual map and chi-squared?
+  fits_galaxy_images : true                # Output a .fits file containing the images (e.g. without PSF convolution) of every galaxy?
+  fits_model_galaxy_images : true          # Output a .fits file containing the model images (e.g. with PSF convolution) of every galaxy?
 
 fit_imaging: {}                            # Settings for plots of fits to imaging datasets (e.g. FitImagingPlotter).
 
 tracer:                                    # Settings for plots of tracers (e.g. TracerPlotter).
   subplot_tracer: true                     # Plot subplot of all quantities in each tracer (e.g. images, convergence)?
   subplot_galaxies_images: false           # Plot subplot of the image of each plane in the tracer?
-  fits_tracer: false                       # Output tracer.fits file of tracer's convergence, potential, deflections_y and deflections_x?
-  fits_source_plane_images: false          # Output source_plane_images.fits file of the source-plane image (light profiles only) of each galaxy in the tracer?
+  fits_tracer: true                        # Output tracer.fits file of tracer's convergence, potential, deflections_y and deflections_x?
+  fits_source_plane_images: true           # Output source_plane_images.fits file of the source-plane image (light profiles only) of each galaxy in the tracer?
   fits_source_plane_shape: (100, 100)      # The shape of the source-plane image output in the fits_source_plane_images.fits file.
 
 inversion:                                 # Settings for plots of inversions (e.g. InversionPlotter).
   subplot_inversion: true                  # Plot subplot of all quantities in each inversion (e.g. reconstrucuted image, reconstruction)?
-  subplot_mappings: true                   # Plot subplot of the image-to-source pixels mappings of each pixelization?
-  csv_reconstruction: false                # output source_plane_reconstruction_0.csv containing the source-plane mesh y, x, reconstruction and noise map values.
+  subplot_mappings: false                  # Plot subplot of the image-to-source pixels mappings of each pixelization?
+  csv_reconstruction: true               # output source_plane_reconstruction_0.csv containing the source-plane mesh y, x, reconstruction and noise map values.
 
 adapt:                                     # Settings for plots of adapt images used by adaptive pixelizations.
   subplot_adapt_images: true               # Plot subplot showing each adapt image used for adaptive pixelization?
@@ -50,7 +50,7 @@ adapt:                                     # Settings for plots of adapt images 
 fit_interferometer:                        # Settings for plots of fits to interferometer datasets (e.g. FitInterferometerPlotter).
   subplot_fit_dirty_images: false          # Plot subplot of the dirty-images of all interferometer datasets?
   subplot_fit_real_space: false            # Plot subplot of the real-space images of all interferometer datasets?
-  fits_dirty_images: false                 # output dirty_images.fits showing the dirty image, noise-map, model-data, resiual-map, normalized residual map and chi-squared map?
+  fits_dirty_images: true                  # output dirty_images.fits showing the dirty image, noise-map, model-data, resiual-map, normalized residual map and chi-squared map?
 
 point_dataset:                             # Settings for plots of point source datasets (e.g. PointDatasetPlotter).
   subplot_dataset: true                    # Plot subplot containing all dataset quantities (e.g. the data, noise-map, etc.)?
